Issue #29319: Prevent RunMainFromImporter overwriting sys.path[0].